<resources>
    <string name="app_name">projeto_desenvolvimento_web</string>
    <string name="logotipo">logotipo</string>
    <string name="CurrencyHub">Currency Hub</string>
    <string name="Login">Login</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esq_senha">Esqueci minha senha</string>
    <string name="cadastrar">Não possuo cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar2">Cadastrar</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>

    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="confSenha">Confirmar senha</string>

    <string name="saudacao_pg1">Seja bem-vindo</string>
    <string name="titulo_pg1">Minhas moedas</string>
    <string name="cotacao">Cotação</string>
    <string name="sair">Sair</string>
    <string name="dolar">US$..................25,00</string>
    <string name="euro">€$.....................25,00</string>
    <string name="libra">£$.....................25,00</string>
    <string name="real">R$.....................25,00</string>


    <string name="saudacao_pg2">Cotações de hoje</string>
    <string name="saudacao_pg3">Currency Hub</string>
    <string name="grafico">grafico</string>
    <string name="button_dolar"> Dolar </string>
    <string name="button_libra"> Libra </string>
    <string name="button2_euro"> Euro </string>
    <string name="button_voltar"> Voltar </string>
    <string name="meusDados"> Meus Dados </string>
    <string name="conf_compra">"Versão de teste, tela para confirmação de compra"</string>

</resources>