<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_nav"
    tools:context=".pagina1">

    <TextView
        android:id="@+id/title_pg1"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo_pg1"
        android:textColor="@color/black"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="236dp"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/container_moedas"
        style="@style/container_moedas"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="324dp" />

    <TextView
        android:id="@+id/moedas_dolar"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dolar"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="344dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/moedas_euro"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="397dp" />

    <TextView
        android:id="@+id/moedas_libra"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/libra"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/moedas_real"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/real"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="501dp" />

    <View
        android:id="@+id/header_title"
        style="@style/Container_header_nav"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bitcoin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/toolbar_title"
        style="@style/ContainerTitulo_nav"
        android:gravity="center"
        android:text="@string/saudacao_pg1"
        android:textColor="@color/white"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="104dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cotacao"
        style="@style/Button_menor"
        android:text="@string/cotacao"
        android:textColor="@color/gray"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="604dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sair"
        style="@style/Button_menor"
        android:text="@string/sair"
        android:textColor="@color/gray"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="684dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>