<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/bitcoin"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/toolbar_title"
        style="@style/ContainerTitulo"
        android:gravity="center"
        android:text="@string/CurrencyHub"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextContrastCheck,TextSizeCheck" />


    <TextView
        android:id="@+id/login"
        style="@style/ContainerLogin"
        android:gravity="center"
        android:importantForAccessibility="no"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_title"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <View
        android:id="@+id/loginComponents"
        style="@style/ContainerComponents"
        android:layout_height="380dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/containerLogEmail"
        style="@style/Container_nome"
        android:hint="@string/email"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:textColor="@color/gray"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/loginComponents"
        app:layout_constraintStart_toStartOf="@+id/loginComponents"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/containerLogSenha"
        style="@style/Container_senha"
        android:layout_marginTop="90dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginComponents"
        app:layout_constraintStart_toStartOf="@+id/loginComponents"
        app:layout_constraintTop_toTopOf="@+id/containerLogEmail"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLog"
        style="@style/Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogSenha"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastrar_seLog"
        style="@style/Button_cadastrar"
        android:text="@string/cadastrar"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog" />





</androidx.constraintlayout.widget.ConstraintLayout>